# golden_alchemist_core

./: Cargo.toml  README.md
crates/golden_alchemist/: Cargo.toml
crates/golden_alchemist/src/: compile.rs  compile_tests.rs  diagnostics.rs  expose.rs  formula.rs  formula_tests.rs  graph.rs  graph_tests.rs  ids.rs  lib.rs  library.rs  library_tests.rs  node.rs  pipeline.rs  pipeline_tests.rs  registry.rs  runtime.rs  runtime_tests.rs  serialize.rs  serialize_tests.rs  tests.rs  typing.rs  typing_tests.rs  value.rs
crates/golden_statechart/: Cargo.toml
crates/golden_statechart/src/: ids.rs  lib.rs  model.rs  tests.rs
