[workspace]
members = ["crates/golden_alchemist", "crates/golden_statechart"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Golden Geek <contact@goldengeek.com>"]
license = "MIT"
repository = "https://github.com/Golden-Geek/golden_alchemist_core"

[workspace.dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
